<resources>
    <string name="app_name">Figaros</string>
    <string name="title_maps">Maps</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="google_maps_key">AIzaSyCcr74TCb_EIH0rtMVzXmsDXe0iXKhJLTs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="txtStoreName">Name</string>
    <string name="txtStoreAddress">Address</string>
    <string name="txtStoreCity">City</string>
    <string name="title_activity_barber_page">BarberPageActivity</string>
    <string name="btnInfo">Informatie wijzigen</string>
    <string name="noInfo">Geen informatie</string>



</resources>
