<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="myandroidapps.figaros.BarberPageActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="280dp"
        android:id="@+id/txtInfo"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/noInfo" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/txtInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btnInfo" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtBname"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/txtStoreName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtStoreAddress"
        android:id="@+id/txtBaddress"
        android:layout_below="@+id/txtBname"
        android:layout_alignStart="@+id/txtBname" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtStoreCity"
        android:id="@+id/txtBcity"
        android:layout_below="@+id/txtBaddress"
        android:layout_alignStart="@+id/txtBaddress" />

</RelativeLayout>
