<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imgStore"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtStoreName"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/imgStore"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtStoreAddress"
        android:id="@+id/txtAddress"
        android:layout_below="@+id/txtName"
        android:layout_toEndOf="@+id/imgStore"
        android:layout_alignParentEnd="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtStoreCity"
        android:id="@+id/txtCity"
        android:layout_below="@+id/txtAddress"
        android:layout_toEndOf="@+id/imgStore"
        android:layout_alignBottom="@+id/imgStore"/>

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/btnFavorite"
        android:background="@drawable/ic_fav"
        android:scaleType="centerCrop"
        android:layout_above="@+id/btnCall"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/btnCall"
        android:background="@drawable/ic_call"
        android:scaleType="centerCrop"
        android:layout_below="@+id/txtAddress"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
